pdf-coordinates-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: pdf-coordinates
  labels:
    name: server
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: server
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: pdf-coordinates
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      automountServiceAccountToken: false
      containers:
        - name: server
          image: pearsonk27/pdf-coordinates-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 125m
              memory: 500Mi
              ephemeral-storage: "1Gi"
            limits:
              cpu: 250m
              memory: 1000Mi
              ephemeral-storage: "2Gi"
