pdf-coordinates-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: pdf-coordinates
  labels:
    name: ui
spec:
  type: NodePort
  ports:
  - port: 4200
    targetPort : 80
    protocol: TCP
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: pdf-coordinates
spec:
  selector:
    matchLabels:
      app: ui
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
    spec:
      automountServiceAccountToken: false
      containers:
        - name: ui
          image: pearsonk27/pdf-coordinates-ui:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
          resources:
            requests:
              cpu: 125m
              memory: 500Mi
              ephemeral-storage: "1Gi"
            limits:
              cpu: 250m
              memory: 1000Mi
              ephemeral-storage: "2Gi"
