postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pdf-coordinates
  labels:
    app: postgres
    tier: database
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: database
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: pdf-coordinates
  labels:
    app: postgres
    tier: database

spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
        tier: database
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: postgres
          resources:
            requests:
              cpu: 125m
              memory: 50Mi
              ephemeral-storage: "1Gi"
            limits:
              cpu: 250m
              memory: 100Mi
              ephemeral-storage: "2Gi"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistance-storage
      volumes:
        - name: postgres-persistance-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
