ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: pdf-coordinates
  labels:
    name: ui
spec:
  ingressClassName: contour
  defaultBackend:
    service:
      name: ui
      port:
        number: 80
